[package]
authors    = ["Mugdha Arunim Ahmed <mugdhaarunimahmed2017@gmail.com>"]
edition    = "2021"
keywords   = ["command-line-utilities"]
license    = "MIT"
name       = "apod-wallpaper"
readme     = "README.md"
repository = "https://github.com/arunim-io/apod-wallpaper"
version    = "0.0.0"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
